--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -421,6 +421,20 @@ a {
     border-radius: 3px;
 }
 
+.comment-head2 {
+    background-color: rgba(31, 49, 119, 1);
+    color: #fff;
+    padding: 15px;
+    width: 100%;
+}
+
+.comment-body {
+    background-color: #fff;
+    padding: 15px;
+    width: 100%;
+    margin-bottom: 20px;
+}
+
 /** =====================
  * Responsive
  ========================*/
@@ -446,6 +460,7 @@ a {
     background: none repeat scroll 0 0 #f5f5f5;
     float: left;
     width: 100%;
+    margin-bottom: 20px;
 }
 
 .status-upload form {
@@ -516,3 +531,4 @@ a {
 .status-upload form button > i {
     margin-right: 7px;
 }
+
