--- a/views/places/list.jade
+++ b/views/places/list.jade
@@ -1,88 +1,109 @@
 extends ../layout
 
 block append css
+    link(rel='stylesheet' href='/stylesheets/easy-autocomplete.css')
+    style(type='text/css').
+        .easy-autocomplete-container ul li {
+            border-radius: 0 !important;
+        }
 
+        input {
+            border-radius: 0 !important
+        }
+
+        .form-control {
+            border-radius: 0 !important
+        }
+
+        .easy-autocomplete input {
+            border-radius: 0 !important
+        }
+
+        li {
+            text-align: left;
+        }
 
 block append content
-    h2.page-header Search for interesting place
-    #wysz.text-center
-        .row
-            .col-sm-12
-                form(method='post', accept-charset='utf-8')
-                    div(style='display:none;')
-                        input(type='hidden', name='_method', value='POST')
-                    .input.text
-                        input#search.form-control(name='search', type='text', placeholder='Search...')
-                input.btn.btn-primary.pull-right(type='submit', value='Search')
-    h2.page-header See also places near you
-    #map
+    .container
+        h2.page-header Search for interesting place
+        #wysz.text-center
+            .row
+                .col-sm-12
+                    form(method='post', accept-charset='utf-8')
+                        div(style='display:none;')
+                            input(type='hidden', name='_method', value='POST')
+                        .input.text
+                            input#search.form-control(name='search', type='text', placeholder='Search...')
+                    input.btn.btn-primary.pull-right(type='submit', value='Search')
+        h2.page-header See also places near you
+        #map
 
 
-    .col-md-12
-        for place in places
-            ul
-                li
-                    a(href='/places/show/' + place._id, title='#{place.name}')= place.name
+        .col-md-12
+            for place in places
+                ul
+                    li
+                        a(href='/places/show/' + place._id, title='#{place.name}')= place.name
 
 
 block append javascripts
+
+
     script.
         $(function () {
 
             var options = {
-            url: function (phrase) {
-            return "/places/search-places/" + phrase;
-        },
-            ajaxSettings: {
-            dataType: "json",
-            method: "GET",
-            data: {
-            dataType: "json"
-        }
-        },
-            getValue: "name",
-            template: {
-            type: "custom",
-            method: function (value, item) {
-            return "<a href='/places/" + item.id + "' >" + value + "</a>";
-        }
-        },
-            list: {
-            match: {
-            enabled: true
-        },
-            maxNumberOfElements: 8
-        }
-        };
+                url: function (phrase) {
+                    return "/places/search-places/" + phrase;
+                },
+                ajaxSettings: {
+                    dataType: "json",
+                    method: "GET",
+                    data: {
+                        dataType: "json"
+                    }
+                },
+                getValue: "name",
+                template: {
+                    type: "custom",
+                    method: function (value, item) {
+                        return "<a href='/places/show/" + item._id + "' >" + value + "</a>";
+                    }
+                },
+                list: {
+                    match: {
+                        enabled: true
+                    },
+                    maxNumberOfElements: 8
+                }
+            };
             $("#search").easyAutocomplete(options);
         });
-            function initMap() {
-            var uluru = {lat: #{$latitude}, lng: #{$longitude}};
+
+
+        function initMap() {
+            var locations = JSON.parse('!{locations}');
+            var uluru = {lat: #{geo.ll[0]}, lng: #{geo.ll[1]}};
             var map = new google.maps.Map(document.getElementById('map'), {
-            zoom: 12,
-            center: uluru
-        });
+                zoom: 12,
+                center: uluru
+            });
             var infowindow = new google.maps.InfoWindow();
             var marker, i;
-            var locations = [
-            for place in places
-                ['<a href="places/ . #{place.id}>#{place.name}</a>', #{place.latitude}, #{place.longitude}],
-            ];
             for (i = 0; i < locations.length; i++) {
-            marker = new google.maps.Marker({
-            position: new google.maps.LatLng(locations[i][1], locations[i][2]),
-            map: map
-        });
-            google.maps.event.addListener(marker, 'click', (function (marker, i) {
-            return function () {
-            infowindow.setContent(locations[i][0]);
-            infowindow.open(map, marker);
-        }
-        })(marker, i));
-        }
+                marker = new google.maps.Marker({
+                    position: new google.maps.LatLng(locations[i].latitude, locations[i].longitude),
+                    map: map
+                });
+                google.maps.event.addListener(marker, 'click', (function (marker, i) {
+                    return function () {
+                        infowindow.setContent(locations[i].link);
+                        infowindow.open(map, marker);
+                    }
+                })(marker, i));
+            }
         }
 
-
-        script(async, defer,src = 'https://maps.googleapis.com/maps/api/js?key=AIzaSyAZioyTQoKs3tMMEgnPWNtdxyne15XBCSg&callback=initMap'
-
-        script(src = '/js/autocomplete.min.js')
+block append javascripts
+        script(async, defer, src = 'https://maps.googleapis.com/maps/api/js?key=AIzaSyAZioyTQoKs3tMMEgnPWNtdxyne15XBCSg&callback=initMap')
+        script(src = '/javascripts/jquery.easy-autocomplete.js')
