--- a/views/places/add.jade
+++ b/views/places/add.jade
@@ -19,7 +19,7 @@ block append content
                     .form-group
                         label.col-md-4.control-label(for='description') Description
                         .col-md-6
-                            textarea.form-control(type='text', name='description', id='description', placeholder='Description')
+                            textarea.form-control(type='text', name='description', id='description', placeholder='Description', required='')
                     input(type='hidden', name='longitude', class='form-control', value='19')
                     input(type='hidden', name='latitude', class='form-control', value='21')
                     .form-group
