--- a/views/places/edit.jade
+++ b/views/places/edit.jade
@@ -18,7 +18,7 @@ block append content
                         .form-group
                             label.col-md-4.control-label(for='description') Description
                             .col-md-6
-                                textarea.form-control(type='text', name='description', id='description', placeholder='Description')
+                                textarea.form-control(type='text', name='description', id='description', placeholder='Description', required='')
                                     | #{place.description}
                         input(type='hidden', name='longitude', class='form-control', value='#{place.longitude}')
                         input(type='hidden', name='latitude', class='form-control', value='#{place.latitude}')
