--- a/views/articles/index.jade
+++ b/views/articles/index.jade
@@ -24,17 +24,23 @@ block append css
         }
 
         .caption {
-            margin-bottom: 10px;
+            margin-bottom: 30px;
+
         }
 
         .thumbnail {
             margin-bottom: 5px;
             border-radius: 0;
+
         }
 
         .thumbnails li > .fff .caption {
             background: #fff !important;
             padding: 10px
+        }
+
+        .thumbnail a>img {
+            height: 100px;
         }
 
         /* Page Header */
@@ -56,13 +62,21 @@ block append css
             margin-bottom: 0;
         }
 
+        .caption {
+            height: 180px;
+        }
+
         /* Thumbnail Box */
         .caption h4 {
             color: #444;
+            height: 20px;
+            overflow: hidden
         }
 
         .caption p {
             color: #999;
+            height: 70px;
+            overflow: hidden;
         }
 
         /* Mobile Only */
@@ -84,7 +98,6 @@ block append css
 
 block append content
     .container
-        .col-xs-12
             #myCarousel.carousel.slide
                 .carousel-inner
                     .item.active
@@ -93,11 +106,11 @@ block append content
                                 li.col-sm-3
                                     .fff
                                         .thumbnail
-                                            a(href='/articles/{article._id}')
-                                                img(src='/uploads/#{article.place.images[0].filename}', alt='#{article.place.name}')
+                                            a(href='/articles/show/#{article._id}')
+                                                img(src='/uploads/#{article._placeId.images[0].filename}', alt='#{article._placeId.name}')
                                         .caption
                                             h4 #{article.name}
                                             p #{article.description}
                                             .text-center
-                                                a.btn.btn-primary(href='/articles/#{article._id}')
+                                                a.btn.btn-primary(href='/articles/show/#{article._id}')
                                                     | Read More
